--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -19,7 +19,12 @@
         width="300px"
         style="border: 1px solid #b1b4b6"
       />
-      <a class="govuk__flex govuk__align-items-center" (click)="downloadCertificate()" target="_blank"
+      <a
+        class="govuk__flex govuk__align-items-center govuk-button--link govuk-link"
+        (click)="downloadCertificate()"
+        target="_blank"
+        href="#"
+        onclick="return false;"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
           >Download your certificate</span
         ></a
