some layout changes as per desk check

--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -18,6 +18,7 @@
         src="/public/download/certificates/sample-image/asc-wds+certificate+sample+23-24.png"
         width="300px"
         style="border: 1px solid #b1b4b6"
+        class="govuk-!-margin-bottom-4"
       />
       <a
         class="govuk__flex govuk__align-items-center govuk-button--link govuk-link"
@@ -39,6 +40,7 @@
         src="public/download/certificates/footer/ASC-WDS_Footer+{{ years }}.jpg"
         width="300px"
         style="border: 1px solid #b1b4b6"
+        class="govuk-!-margin-bottom-4"
       />
       <a
         class="govuk__flex govuk__align-items-center"
@@ -60,6 +62,7 @@
         src="public/download/certificates/logo/ASC-WDS+logo_20{{ years }}.jpg"
         width="150px"
         style="border: 1px solid #b1b4b6"
+        class="govuk-!-margin-bottom-4"
       />
       <a
         class="govuk__flex govuk__align-items-center"
