Add table for listing mandatory training

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -1,5 +1,14 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Add and manage mandatory training</h1>
+
+    <table class="govuk-table" data-testid="training-worker-table">
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th class="govuk-table__header" scope="col">Mandatory training categories</th>
+          <th class="govuk-table__header" scope="col">Job roles</th>
+        </tr>
+      </thead>
+    </table>
   </div>
 </div>
