Add paragraph for mandatory training

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -2,6 +2,11 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Add and manage mandatory training</h1>
 
+    <p>
+      Add the training categories you want to make mandatory for your staff. it will help you identify who is missing
+      training and let you know when training expires.
+    </p>
+
     <table class="govuk-table" data-testid="training-worker-table">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
