minor text changes on download links

--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -27,7 +27,7 @@
         href="#"
         onclick="return false;"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
-          >Download your certificate</span
+          >Download your certificate (PDF, 90KB)</span
         ></a
       >
     </div>
