--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -47,7 +47,7 @@
         href="public/download/certificates/footer/ASC-WDS_Footer+{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
-          >Download your email signature</span
+          >Download your email signature (JPG, 96KB)</span
         ></a
       >
     </div>
@@ -69,7 +69,7 @@
         href="public/download/certificates/logo/ASC-WDS+logo_20{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
-          >Download your logo</span
+          >Download your logo (JPG, 145KB)</span
         ></a
       >
     </div>
