remove mini flow route for year arrived in uk, and alter components navigation

--- a/src/app/features/workers/country-of-birth/country-of-birth.component.html
+++ b/src/app/features/workers/country-of-birth/country-of-birth.component.html
@@ -89,8 +89,8 @@
   </div>
 
   <app-submit-button
-    [showSaveAndCancelButton]="!insideFlow"
     [return]="!insideFlow"
+    [summaryContinue]="true"
     (clicked)="setSubmitAction($event)"
   ></app-submit-button>
 </form>
