--- a/src/app/features/workers/year-arrived-uk/year-arrived-uk.component.html
+++ b/src/app/features/workers/year-arrived-uk/year-arrived-uk.component.html
@@ -88,8 +88,5 @@
     </div>
   </div>
 
-  <app-submit-button
-    [return]="!insideFlow || insideYearArrivedUkMiniFlow"
-    (clicked)="setSubmitAction($event)"
-  ></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
