fix total staff panel tests and country of birth tests, remove this.previous logic from year arrived uk and country of birth components

--- a/src/app/shared/components/total-staff-panel/total-staff-panel.component.html
+++ b/src/app/shared/components/total-staff-panel/total-staff-panel.component.html
@@ -6,7 +6,7 @@
     <dd data-testid="totalStaffText">
       <span class="govuk-!-margin-right-1">total number of staff {{ !totalStaff ? 'is missing' : '' }}</span>
     </dd>
-    <dd>
+    <dd data-testid="totalStaffLink">
       <a
         *ngIf="canEditEstablishment"
         [routerLink]="['/workplace', workplace.uid, 'staff-record', 'total-staff']"
