Add style for the add mandatory training category

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -1,19 +1,28 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">Add and manage mandatory training</h1>
-
-    <p>
-      Add the training categories you want to make mandatory for your staff. it will help you identify who is missing
-      training and let you know when training expires.
-    </p>
-
-    <table class="govuk-table" data-testid="training-worker-table">
-      <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-          <th class="govuk-table__header" scope="col">Mandatory training categories</th>
-          <th class="govuk-table__header" scope="col">Job roles</th>
-        </tr>
-      </thead>
-    </table>
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+    <h1 class="govuk-heading-l">Add and manage mandatory training categories</h1>
   </div>
+
+  <div class="govuk-grid-column-one-half">
+    <p>
+      Add the training categories you want to make mandatory for your staff.it will help you identify<br />
+      who is missing training and let you know when<br />
+      training expires.
+    </p>
+  </div>
+  <div class="govuk-grid-column-one-half govuk-!-margin-bottom-2 govuk-util__align-right">
+    <button class="govuk-button">Add a mandatory training category</button>
+  </div>
+  <div class="govuk-grid-column-one-half govuk-!-margin-bottom-6 govuk-util__align-right govuk-list govuk-list--inline">
+    <a href="#">Remove all mandatory training categories</a>
+  </div>
+
+  <table class="govuk-table" data-testid="training-worker-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th class="govuk-table__header" scope="col">Mandatory training categories</th>
+        <th class="govuk-table__header" scope="col">Job roles</th>
+      </tr>
+    </thead>
+  </table>
 </div>
