--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -13,16 +13,34 @@
   <div class="govuk-grid-column-one-half govuk-!-margin-bottom-2 govuk-util__align-right">
     <button class="govuk-button">Add a mandatory training category</button>
   </div>
-  <div class="govuk-grid-column-one-half govuk-!-margin-bottom-6 govuk-util__align-right govuk-list govuk-list--inline">
+  <div
+    class="govuk-grid-column-one-half govuk-!-margin-bottom-6 govuk-util__align-right govuk-list govuk-list--inline"
+    *ngIf="existingMandatoryTrainings.mandatoryTrainingCount > 0"
+  >
     <a href="#">Remove all mandatory training categories</a>
   </div>
-
-  <table class="govuk-table" data-testid="training-worker-table">
+  <table
+    class="govuk-table"
+    data-testid="training-worker-table"
+    *ngIf="existingMandatoryTrainings.mandatoryTrainingCount > 0"
+  >
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th class="govuk-table__header" scope="col">Mandatory training categories</th>
         <th class="govuk-table__header" scope="col">Job roles</th>
       </tr>
     </thead>
+    <tbody class="govuk-table__body" *ngFor="let records of existingMandatoryTrainings.mandatoryTraining">
+      <ng-container>
+        <tr class="govuk-table__row govuk-util__vertical-align-top">
+          <td class="govuk-table__cell">
+            <a href="#">
+              {{ records.category }}
+            </a>
+          </td>
+          <td class="govuk-table__cell">{{ '-' }}</td>
+        </tr>
+      </ng-container>
+    </tbody>
   </table>
 </div>
