remove social care qualification miniflow and alter navigation, write new tests for submit button

--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -43,11 +43,12 @@
     </ng-container>
   </ng-template>
   <ng-template #summary>
-    <!-- <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick('continue', true)">
-      Save
-    </button> -->
-
-    <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick(summaryActionType, true)">
+    <button
+      type="submit"
+      class="govuk-button govuk-!-margin-right-9"
+      (click)="onButtonClick(summaryActionType, true)"
+      [ngClass]="{ additionalHorizontalPadding: summaryContinue }"
+    >
       {{ summaryContinue ? 'Save' : 'Save and return' }}
     </button>
 
