--- a/src/app/features/workers/other-qualifications/other-qualifications.component.html
+++ b/src/app/features/workers/other-qualifications/other-qualifications.component.html
@@ -42,7 +42,7 @@
   </div>
 
   <app-submit-button
-    [showSaveAndCancelButton]="!insideFlow"
+    [summaryContinue]="true"
     [return]="!insideFlow"
     (clicked)="setSubmitAction($event)"
   ></app-submit-button>
