--- a/src/app/features/workers/nationality/nationality.component.html
+++ b/src/app/features/workers/nationality/nationality.component.html
@@ -86,7 +86,7 @@
   </div>
 
   <app-submit-button
-    [showSaveAndCancelButton]="!insideFlow"
+    [summaryContinue]="true"
     [return]="!insideFlow"
     (clicked)="setSubmitAction($event)"
   ></app-submit-button>
