--- a/src/app/features/workers/other-qualifications-level/other-qualifications-level.component.html
+++ b/src/app/features/workers/other-qualifications-level/other-qualifications-level.component.html
@@ -1,9 +1,7 @@
-<app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
-
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('qualification').invalid">
+      <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper">
           <label class="govuk-label govuk-label--l govuk-!-margin-bottom-8" for="qualification">
             <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
@@ -24,17 +22,9 @@
           </p>
         </app-details>
         <label class="govuk-label" for="qualification"> Qualification level </label>
-        <span
-          *ngIf="submitted && form.get('qualification').errors"
-          id="qualification-error"
-          class="govuk-error-message"
-        >
-          <span class="govuk-visually-hidden">Error:</span>
-          {{ getFormErrorMessage('qualification', 'required') }}
-        </span>
+
         <select
           class="govuk-select govuk-!-width-one-half"
-          [class.govuk-select--error]="submitted && form.get('qualification').invalid"
           [formControlName]="'qualification'"
           id="qualification"
           name="qualification"
