change routing for accessing mental health professional from staff-details

--- a/src/app/features/workers/mental-health-professional/mental-health-professional.component.html
+++ b/src/app/features/workers/mental-health-professional/mental-health-professional.component.html
@@ -41,8 +41,5 @@
     </div>
   </div>
 
-  <app-submit-button
-    [return]="!insideFlow || insideMentalHealthProfessionalSummaryFlow"
-    (clicked)="setSubmitAction($event)"
-  ></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
