--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -120,11 +120,11 @@
     </div>
   </div>
   <app-submit-button
-    [showSaveAndCancelButton]="showSaveAndCancelButton"
+    [summaryContinue]="summaryContinue"
     [callToAction]="submitTitle"
     [recordSummary]="false"
     [canExit]="canExit"
-    [return]="!insideFlow && !inMandatoryDetailsFlow ? false : editFlow"
+    [return]="editFlow"
     [isExistingStaffRecord]="!!worker"
     (clicked)="setSubmitAction($event)"
   >
