--- a/src/app/features/workers/nursing-category/nursing-category.component.html
+++ b/src/app/features/workers/nursing-category/nursing-category.component.html
@@ -41,8 +41,7 @@
   </div>
 
   <app-submit-button
-    [recordSummary]="!registeredNurseFlow"
-    [canExit]="registeredNurseFlow"
+    [summaryContinue]="true"
     [return]="!insideFlow"
     (clicked)="setSubmitAction($event)"
   ></app-submit-button>
