change the marging for add and manage mandatory table

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -6,7 +6,7 @@
     </h1>
   </div>
 
-  <div class="govuk-grid-column-one-half govuk-!-margin-top-3">
+  <div class="govuk-grid-column-one-half govuk-!-margin-top-2 govuk-!-margin-bottom-6">
     <p>
       Add the training categories you want to make mandatory for your staff. It will help you identify<br />
       who is missing training and let you know when<br />
