redo navigation for components

--- a/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
+++ b/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
@@ -40,10 +40,10 @@
         </div>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third-from-desktop">
+    <div class="govuk-grid-column-one-third-from-desktop" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
-          data-testid="progress-bar-1"
+          data-testid="progress-bar"
           [sections]="staffRecordSections"
           [currentSection]="'Personal details'"
         ></app-progress-bar>
