--- a/src/app/features/workers/nursing-category/nursing-category.component.html
+++ b/src/app/features/workers/nursing-category/nursing-category.component.html
@@ -29,7 +29,7 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third" *ngIf="!registeredNurseFlow && insideFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar"
