--- a/src/app/features/workers/apprenticeship-training/apprenticeship-training.component.html
+++ b/src/app/features/workers/apprenticeship-training/apprenticeship-training.component.html
@@ -33,7 +33,7 @@
     <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
-          data-testid="progress-bar-1"
+          data-testid="progress-bar"
           [sections]="staffRecordSections"
           [currentSection]="section"
         ></app-progress-bar>
@@ -41,5 +41,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
