--- a/src/app/features/workers/british-citizenship/british-citizenship.component.html
+++ b/src/app/features/workers/british-citizenship/british-citizenship.component.html
@@ -33,7 +33,7 @@
     <div class="govuk-grid-column-one-third" *ngIf="insideFlow && !insideBritishCitizenshipSummaryFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
-          data-testid="progress-bar-1"
+          data-testid="progress-bar"
           [sections]="staffRecordSections"
           [currentSection]="section"
         ></app-progress-bar>
@@ -41,8 +41,5 @@
     </div>
   </div>
 
-  <app-submit-button
-    [return]="!insideFlow || insideBritishCitizenshipSummaryFlow"
-    (clicked)="setSubmitAction($event)"
-  ></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
