--- a/src/app/features/workers/mandatory-details/mandatory-details.component.html
+++ b/src/app/features/workers/mandatory-details/mandatory-details.component.html
@@ -36,7 +36,7 @@
   <div class="govuk-grid-column-one-third-from-desktop" style="border: 1px solid black">
     <div class="govuk-!-margin-left-8">
       <app-progress-bar
-        data-testid="progress-bar-1"
+        data-testid="progress-bar"
         [sections]="staffRecordSections"
         [currentSection]="'Mandatory information'"
         [currentSectionComplete]="true"
