--- a/src/app/features/workers/year-arrived-uk/year-arrived-uk.component.html
+++ b/src/app/features/workers/year-arrived-uk/year-arrived-uk.component.html
@@ -77,10 +77,10 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third" *ngIf="insideFlow && !insideYearArrivedUkMiniFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
-          data-testid="progress-bar-1"
+          data-testid="progress-bar"
           [sections]="staffRecordSections"
           [currentSection]="section"
         ></app-progress-bar>
