--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -1,23 +1,30 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-two-thirds" data-testid="heading">
     <h1 class="govuk-heading-l">
       Add and manage mandatory<br />
       training categories
     </h1>
   </div>
 
-  <div class="govuk-grid-column-one-half govuk-!-margin-top-2 govuk-!-margin-bottom-6">
+  <div
+    class="govuk-grid-column-one-half govuk-!-margin-top-2 govuk-!-margin-bottom-6"
+    data-testid="mandatoryTrainingInfo"
+  >
     <p>
       Add the training categories you want to make mandatory for your staff. It will help you identify<br />
       who is missing training and let you know when<br />
       training expires.
     </p>
   </div>
-  <div class="govuk-grid-column-one-half govuk-!-margin-bottom-2 govuk-util__align-right">
+  <div
+    class="govuk-grid-column-one-half govuk-!-margin-bottom-2 govuk-util__align-right"
+    data-testid="mandatoryTrainingButton"
+  >
     <button class="govuk-button">Add a mandatory training category</button>
   </div>
   <div
     class="govuk-grid-column-one-half govuk-!-margin-bottom-6 govuk-util__align-right govuk-list govuk-list--inline"
+    data-testid="removeMandatoryTrainingLink"
     *ngIf="existingMandatoryTrainings.mandatoryTrainingCount > 0"
   >
     <a href="#">Remove all mandatory training categories</a>
