fix the failing test for mandatory training

--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -24,10 +24,9 @@
   </div>
   <div
     class="govuk-grid-column-one-half govuk-!-margin-bottom-6 govuk-util__align-right govuk-list govuk-list--inline"
-    data-testid="removeMandatoryTrainingLink"
     *ngIf="existingMandatoryTrainings.mandatoryTrainingCount > 0"
   >
-    <a href="#">Remove all mandatory training categories</a>
+    <a data-testid="removeMandatoryTrainingLink" href="#">Remove all mandatory training categories</a>
   </div>
 </div>
 <table
