--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -43,7 +43,7 @@
   <ng-container>
     <tbody class="govuk-table__body" *ngFor="let records of existingMandatoryTrainings.mandatoryTraining">
       <tr class="govuk-table__row govuk-util__vertical-align-top">
-        <td class="govuk-table__cell">
+        <td class="govuk-table__cell" [attr.data-testid]="'category-' + records.category">
           <a href="#">
             {{ records.category }}
           </a>
@@ -51,10 +51,10 @@
 
         <td class="govuk-table__cell">
           <ng-container *ngIf="records.jobs.length > 28">
-            {{ 'All' }}
+            <span data-testid="titleAll">{{ 'All' }}</span>
           </ng-container>
           <ng-container *ngIf="records.jobs.length < 29">
-            <div *ngFor="let job of records.jobs">{{ job.title }}</div>
+            <div data-testid="titleJob" *ngFor="let job of records.jobs">{{ job.title }}</div>
           </ng-container>
         </td>
       </tr>
