--- a/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/list-mandatory-training/list-mandatory-training.component.html
@@ -29,13 +29,9 @@
     <a data-testid="removeMandatoryTrainingLink" href="#">Remove all mandatory training categories</a>
   </div>
 </div>
-<table
-  class="govuk-table"
-  data-testid="training-worker-table"
-  *ngIf="existingMandatoryTrainings.mandatoryTrainingCount > 0"
->
+<table class="govuk-table" data-testid="training-table" *ngIf="existingMandatoryTrainings.mandatoryTrainingCount > 0">
   <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
+    <tr class="govuk-table__row" data-testid="training-table-heading">
       <th class="govuk-table__header" scope="col">Mandatory training categories</th>
       <th class="govuk-table__header" scope="col">Job roles</th>
     </tr>
