--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -21,15 +21,16 @@
         class="govuk-!-margin-bottom-4"
       />
       <a
-        class="govuk__flex govuk__align-items-center govuk-button--link govuk-link"
+        class="govuk-list govuk-list--inline govuk__flex govuk__align-items-center govuk-button--link govuk-link"
         (click)="downloadCertificate()"
         target="_blank"
         href="#"
         onclick="return false;"
-        ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
-          >Download your certificate (PDF, 90KB)</span
-        ></a
       >
+        <img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
+          >Download your certificate (PDF, 90KB)</span
+        >
+      </a>
     </div>
     <div class="govuk-grid-row govuk-!-margin-bottom-8" data-testid="footerDownload">
       <h2 class="govuk-heading-s">ASC-WDS email signature</h2>
@@ -43,7 +44,7 @@
         class="govuk-!-margin-bottom-4"
       />
       <a
-        class="govuk__flex govuk__align-items-center"
+        class="govuk-list govuk-list--inline govuk__flex govuk__align-items-center"
         href="public/download/certificates/footer/ASC-WDS_Footer+{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
@@ -65,7 +66,7 @@
         class="govuk-!-margin-bottom-4"
       />
       <a
-        class="govuk__flex govuk__align-items-center"
+        class="govuk-list govuk-list--inline govuk__flex govuk__align-items-center"
         href="public/download/certificates/logo/ASC-WDS+logo_20{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
